Changing CSS display must update ax tree

The accessible tree was not being updated when layout tree included
nodeless objects, which are used to parent inline objects
when they have block siblings. This fixes the closest node logic used
to find a node for a layout object or layout ancestor.

Bug: 895183
Change-Id: Iec46a5d97f60137a35350a9c4a5c89d45056a9a0
Reviewed-on: https://chromium-review.googlesource.com/c/1280789
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#599697}
Former-commit-id: dcc6c2f207279f4ee1f209aa154bd3299a5c921d